Bug 247902 - kile has crashed changing the style
Summary: kile has crashed changing the style
Status: RESOLVED FIXED
Alias: None
Product: Oxygen
Classification: Plasma
Component: style (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Hugo Pereira Da Costa
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-15 00:23 UTC by fake name
Modified: 2010-08-25 17:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description fake name 2010-08-15 00:23:06 UTC
Application: kile (2.0.85)
KDE Platform Version: 4.5.00 (KDE 4.5.0)
Qt Version: 4.6.3
Operating System: Linux 2.6.34-12-desktop x86_64
Distribution: "openSUSE 11.3 (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed:

Kile has crashed when I changed the style from Oxygen to QtCurve. I have changed the style because I get a lot of crashes due to oxygen.

Kile was situated tlled in the lef part if the desktop whit a keyboard shortcut.

-- Backtrace:
Application: Kile (kile), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fb977c47760 (LWP 13389))]

Thread 2 (Thread 0x7fb961107710 (LWP 13504)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fb971ccee30 in QTWTF::TCMalloc_PageHeap::scavengerThread (this=0x7fb971fb4220) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2304
#2  0x00007fb971ccee69 in QTWTF::TCMalloc_PageHeap::runScavengerThread (context=0x7fb971fc22ec) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:1438
#3  0x00007fb9751f4a4f in start_thread (arg=0x7fb961107710) at pthread_create.c:297
#4  0x00007fb973b5882d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fb977c47760 (LWP 13389)):
[KCrash Handler]
#6  0x00007fb96a75f370 in vtable for Oxygen::SunkenFrameShadow () from /usr/lib64/kde4/plugins/styles/oxygen.so
#7  0x00007fb97556f7a9 in QMetaObject::cast (this=0x7fb96a75ec60, obj=0x15eeca0) at kernel/qmetaobject.cpp:266
#8  0x00007fb96a4f674e in qobject_cast<Oxygen::FrameShadowBase*> (this=<value optimized out>, widget=<value optimized out>) at /usr/include/QtCore/qobject.h:455
#9  Oxygen::FrameShadowFactory::removeShadows (this=<value optimized out>, widget=<value optimized out>) at /usr/src/debug/kdebase-workspace-4.5.0/kstyles/oxygen/oxygenframeshadow.cpp:128
#10 0x00007fb96a507265 in Oxygen::FrameShadowFactory::unregisterWidget (this=0xb07800, widget=0x155af50) at /usr/src/debug/kdebase-workspace-4.5.0/kstyles/oxygen/oxygenframeshadow.cpp:94
#11 0x00007fb96a5072bd in Oxygen::Style::unpolish (this=<value optimized out>, widget=0x155af50) at /usr/src/debug/kdebase-workspace-4.5.0/kstyles/oxygen/oxygenstyle.cpp:4802
#12 0x00007fb9744cb9c4 in QApplication::setStyle (style=0xac0270) at kernel/qapplication.cpp:1420
#13 0x00007fb9744cbda6 in QApplication::setStyle (style=<value optimized out>) at kernel/qapplication.cpp:1522
#14 0x00007fb96a76b5ca in updateWidgetStyle (this=0xab0260, _c=<value optimized out>, _id=1, _a=<value optimized out>)
    at /usr/src/debug/kdebase-workspace-4.5.0/qguiplatformplugin_kde/qguiplatformplugin_kde.cpp:357
#15 KQGuiPlatformPlugin::qt_metacall (this=0xab0260, _c=<value optimized out>, _id=1, _a=<value optimized out>)
    at /usr/src/debug/kdebase-workspace-4.5.0/build/qguiplatformplugin_kde/qguiplatformplugin_kde.moc:74
#16 0x00007fb97557da1f in QMetaObject::activate (sender=0xaaea30, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x0) at kernel/qobject.cpp:3295
#17 0x00007fb975e99328 in KGlobalSettings::Private::applyGUIStyle (this=<value optimized out>) at /usr/src/debug/kdelibs-4.5.0/kdeui/kernel/kglobalsettings.cpp:900
#18 0x00007fb975e99818 in KGlobalSettings::Private::kdisplaySetStyle (this=0xb0f6a0) at /usr/src/debug/kdelibs-4.5.0/kdeui/kernel/kglobalsettings.cpp:1015
#19 0x00007fb975e9a2b7 in KGlobalSettings::Private::_k_slotNotifyChange (this=0xb0f6a0, changeType=2, arg=0) at /usr/src/debug/kdelibs-4.5.0/kdeui/kernel/kglobalsettings.cpp:821
#20 0x00007fb975e9a74b in KGlobalSettings::qt_metacall (this=0xaaea30, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff9f70d1e0)
    at /usr/src/debug/kdelibs-4.5.0/build/kdeui/kglobalsettings.moc:100
#21 0x00007fb974f98188 in QDBusConnectionPrivate::deliverCall (this=0xa13700, object=0xaaea30, msg=..., metaTypes=..., slotIdx=14) at qdbusintegrator.cpp:904
#22 0x00007fb974fa4ecf in QDBusCallDeliveryEvent::placeMetaCall (this=<value optimized out>, object=<value optimized out>) at qdbusintegrator_p.h:101
#23 0x00007fb97557b509 in QObject::event (this=0xaaea30, e=0x1f21fd0) at kernel/qobject.cpp:1248
#24 0x00007fb9744c84d4 in QApplicationPrivate::notify_helper (this=0xa1c450, receiver=0xaaea30, e=0x1f21fd0) at kernel/qapplication.cpp:4302
#25 0x00007fb9744d0aca in QApplication::notify (this=<value optimized out>, receiver=0xaaea30, e=0x1f21fd0) at kernel/qapplication.cpp:4185
#26 0x00007fb975e8f0b6 in KApplication::notify (this=0x7fff9f70dcc0, receiver=0xaaea30, event=0x1f21fd0) at /usr/src/debug/kdelibs-4.5.0/kdeui/kernel/kapplication.cpp:310
#27 0x00007fb975569e4c in QCoreApplication::notifyInternal (this=0x7fff9f70dcc0, receiver=0xaaea30, event=0x1f21fd0) at kernel/qcoreapplication.cpp:726
#28 0x00007fb97556d5ba in sendEvent (receiver=0x0, event_type=0, data=0x9f0da0) at kernel/qcoreapplication.h:215
#29 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x9f0da0) at kernel/qcoreapplication.cpp:1367
#30 0x00007fb975592173 in sendPostedEvents (s=<value optimized out>) at kernel/qcoreapplication.h:220
#31 postEventSourceDispatch (s=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:276
#32 0x00007fb96f011a93 in g_main_dispatch (context=0xa1ed20) at gmain.c:1960
#33 IA__g_main_context_dispatch (context=0xa1ed20) at gmain.c:2513
#34 0x00007fb96f012270 in g_main_context_iterate (context=0xa1ed20, block=1, dispatch=1, self=<value optimized out>) at gmain.c:2591
#35 0x00007fb96f012510 in IA__g_main_context_iteration (context=0xa1ed20, may_block=1) at gmain.c:2654
#36 0x00007fb97559267f in QEventDispatcherGlib::processEvents (this=0x9f7640, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:412
#37 0x00007fb97456914e in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#38 0x00007fb975569292 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#39 0x00007fb975569495 in QEventLoop::exec (this=0x7fff9f70dc10, flags=...) at kernel/qeventloop.cpp:201
#40 0x00007fb97556d88b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1003
#41 0x00000000005d3f62 in _start ()

Reported using DrKonqi
Comment 1 Hugo Pereira Da Costa 2010-08-15 04:11:54 UTC
Is it always reproducible ?
Comment 2 Hugo Pereira Da Costa 2010-08-15 04:12:53 UTC
And can you elaborate on the "a lot of crashes due to oxygen" ?
Comment 3 Hugo Pereira Da Costa 2010-08-15 14:44:32 UTC
I can reproduce. Every time. 
This occurs (with kile) when changing from oxygen to any style, and from the crash report, it hapens at clean-up stage. 
The confusing part is that it does not happen to all kde applications (which I would have expected with e.g. some double-deletion of objects). 
I'm investigating now.
Comment 4 Hugo Pereira Da Costa 2010-08-25 17:16:17 UTC
SVN commit 1167880 by hpereiradacosta:

Do not install shadows on QSplitter (this is obviously not necessary), despite 
the fact that the frameShape for such widgets is set (by Qt) to 
StyledFrame|Sunken.

BUG: 247902
 --This line, and those below, will be ignored--

M    oxygenframeshadow.cpp


 M  +17 -6     oxygenframeshadow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1167880
Comment 5 Hugo Pereira Da Costa 2010-08-25 17:18:06 UTC
SVN commit 1167881 by hpereiradacosta:

backport 1167880
Do not install shadows on QSplitter (this is obviously not necessary), despite 
the fact that the frameShape for such widgets is set (by Qt) to 
StyledFrame|Sunken.

CCBUG: 247902


 M  +17 -6     oxygenframeshadow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1167881