Do not install shadows on QSplitter (this is obviously not necessary), despite the fact that the frameShape for such widgets is set (by Qt) to StyledFrame|Sunken.

BUG: 247902
 --This line, and those below, will be ignored--

M    oxygenframeshadow.cpp

svn path=/trunk/KDE/kdebase/workspace/; revision=1167880